--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -11,10 +14,18 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.22",
+    "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.0",
     "react-redux": "^8.1.3",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-stripe-checkout": "^2.6.3",
+    "sass": "^1.72.0",
+    "sweetalert2": "^11.10.6",
+    "tailwind": "^4.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
